# reformat_EXIOBASE

./: .gitignore  LICENSE  README.md  pyproject.toml
example/: map_regions.csv  map_sectors.csv  run.py
reformat_EXIOBASE/: pyproject.toml
reformat_EXIOBASE/src/reformat_exiobase/: __init.py__.py  download_EXIOBASE.py  reformat_EXIOBASE.py
reformat_EXIOBASE/src/reformat_exiobase/mappings/: map_GTAP_format.xlsx  map_regions.csv  map_sectors.csv
src/reformat_exiobase/: __init__.py  aggregate_EXIOBASE.py  download_EXIOBASE.py  reformat_EXIOBASE.py
src/reformat_exiobase/mappings/: map_GTAP_format.xlsx  map_reformat_EXIOBASE.csv  map_reformat_EXIOBASE_inventories.csv
tests/: test_G_energy.py
