[project]
name = "reformat-exiobase"
version = "0.1.0"
description = "Tool to download, aggregate and reformat EXIOBASE data"
authors = [
    {name = "RitaMaestri",email = "maestri@smash.fr"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    { name = "numpy", version = "1.21.5" },
    { name = "pandas", version = "1.4.4" },
    { name = "pymrio", version = "0.5.4" }
]

[tool.poetry]
packages = [{include = "reformat_exiobase", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
